--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
         <h1>My name is abin baby</h1>  
         <h1>I am great dev</h1>  
         <p>This is a test page.</p>
+<img src="hyper-realistic image of a luxurious BMW 7 in a dark background.png">
+
     </body>
 </html>
