colour and font changed

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <title>Test</title>
     <link rel="stylesheet" href="styles.css">
     <body>
-        <h1>Hello World!</h1> 
+        <h1 align="center" >Hello World!</h1> 
         <h1>My name is abin baby</h1>  
         <h1>I am great dev</h1>  
         <p>This is a test page.</p>
